[blink] Perspective layer should be considered fixed-pos container layer

This CL fixes a bug that fixed-position descendants skip its containing
block's perspective transform. Perspective layer (CompositedLayerMapping::
child_transform_layer_) should be considered fixed-pos container if
present.

BUG=714001
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2833233002
Cr-Commit-Position: refs/heads/master@{#467175}

Former-commit-id: 25eaaeb522126f998e9bd83056f96a5ce3cc78c2